<resources>
    <string name="app_name">NewApplication</string>
    <string name="uploaded_image">Uploaded image</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="newUserSignUp">New User? Sign Up</string>
    <string name="incorrect_email_or_password">Incorrect Email or Password</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>

    <string name="title_activity_image_viewer">ImageViewer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="full_screen_image">Full Screen Image</string>
    <string name="share">Share</string>
    <string name="send_to">Send To</string>
</resources>
